--- a/Writeup/Theory.tex
+++ b/Writeup/Theory.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper,margin=1in]{book}
+\documentclass[12pt,a4paper,margin=1in]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -6,11 +6,16 @@
 \usepackage{graphicx}
 \usepackage{braket}
 \usepackage{bm}
+\usepackage[toc,page]{appendix}
+\pagenumbering{arabic}
+\linespread{1.3}
 \begin{document}
 
 \chapter{Theory of Laser Spectroscopy}
+In this chapter, the theoretical background necessary to the understanding and simulation of a hyperfine spectrum is presented. In $\S$ \ref{AHF}, the features of a hyperfine spectrum are liked to physical properties a nucleus. Next, $\S$ \ref{ALI} outlines the way in which lasers interact with atoms
 Note: Throughout this section, a variable written in a bold typeface is vector valued, while its non-bold counterpart is its magnitude. 
 \section{Anatomy of A Hyperfine Spectrum}
+\label{AHF}
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{Graphics/ga69.png}
 \label{ga69}
@@ -51,7 +56,7 @@ The change in the charge distribution of the nucleus produces the Field shift. W
 \begin{equation}
 E_F = \frac{Ze^2}{6 \epsilon_0}|\psi(0)|^2 \left\langle r_{ch}^2\right\rangle
 \end{equation}
-where $\epsilon_0$ is the permitivity of free space, $Z$ is the proton number and $ \left\langle r_{ch}^2\right\rangle$ is the mean-square charge radius of the nucleus, defined as
+where $\epsilon_0$ is the permitivity of free space, $Z$ is the proton number, $e$ is the fundamental charge and $ \left\langle r_{ch}^2\right\rangle$ is the mean-square charge radius of the nucleus, defined as
 \begin{equation}
  \left\langle r_{ch}^2\right\rangle = \frac{\int_0^{\infty}\rho(\mathbf{r})r^2dV}{\int_0^{\infty}\rho(\mathbf{r})dV}
 \end{equation}
@@ -116,11 +121,13 @@ $e$ is the fundamental charge and $V$ is the electric potential. Recalling that 
 
 \begin{equation}
 \Delta E_{\mathrm{Q_s}} = \frac{B}{4}\left[\frac{\frac{3}{2}K(K+1)-2\mathrm{I}(\mathrm{I}+1)\mathrm{J}(\mathrm{J}+1)}{\mathrm{I}(2\mathrm{I}-1)\mathrm{J}(2\mathrm{J}-1)}\right]
+\label{B-eq}
 \end{equation}
 where $B$ is a hyperfine coefficient and is given by
 \begin{equation}
 B = e\mathrm{Q_s}\left\langle\frac{\partial^2V}{\partial z^2} \right\rangle
 \end{equation}
+Eq. \ref{B-eq} has singularities at \textbf{I} = $\frac{1}{2}$ and \textbf{J}=$\frac{1}{2}$. This captures the fact that in either case there is no coupling between the nucleus and the electrons, as an orbital angular momentum state of $\frac{1}{2}$ is isotropically distributed in space .
 
 \subsubsection*{The Hyperfine Equation}
 The resonant energy of a transition between $\ket{g}=\ket{n_g,\mathrm{\textbf{F}_g=\textbf{I} + \textbf{J}_g}}$ and $\ket{e}=\ket{n_e,\mathrm{\textbf{F}_e=\textbf{I} + \textbf{J}_e}}$ is then given by
@@ -128,7 +135,77 @@ The resonant energy of a transition between $\ket{g}=\ket{n_g,\mathrm{\textbf{F}
 E_{hfs} = E_{fs} +  \Delta E_{\mathrm{A,A'}}+\Delta E_{\mu_I}\Bigr|_{\mathrm{F_g},I,J_g}^{\mathrm{F_e},I,J_e}+\Delta E_{\mathrm{Q_s}}\Bigr|_{\mathrm{F_g},I,J_g}^{\mathrm{F_e},I,J_e}
 \end{equation}
 
+When a hyperfine spectrum is fit, the fit parameters which govern the locations of the peaks are the hyperfine parameters $A$ and $B$ for both $\ket{e}$ and $\ket{g}$, as well as what is known as the centroid, $\nu_0$. The centroid combines the fine structure energy and the isotope shift into one quantity. It is important to note that while the values of hyperfine coefficients can be directly linked to the physical properties of the nucleus, only the change in the centroid with respect to a reference isotope can be used to measure the change in the mean-square charge radius.
+
+\subsection{Peak intensities} 
+The other notable characteristic of a hyperfine spectrum, the ratios of the peak intensities can give information as to the spin of the nucleus if the angular momentum states of the electron orbitals are known. 
+
+\section{Spontaneous Emission in \\ Multi-Level Atoms}
+\label{ALI}
+A hyperfine spectrum is constructed through the measurement of the photons emitted as electrons in excited states de-excite to lower energy states. In order to simulate a hyperfine spectrum, then, it is necessary to understand the mechanisms through which electrons transition between energy levels in an atom.
+
+Consider a two-level atom in an excited state. After a time $t$, the atom transitions to the ground state. The wavefunction of the system is given by
 \begin{equation}
-\Delta E_{hfs} = 
+\ket{\psi} = c_{e,0}e^{-i\omega_et}\ket{e,0} + \sum_Sc_{g,1}e^{-i(\omega_g+\omega)t}\ket{g,1_S}
 \end{equation}
+where $S = (\bm{k},\bm{\varepsilon})$ gives the wavevector $\bm{k}$ and polarization $\bm{\varepsilon}$ of an emitted photon, $\omega = kc$, $\omega_e$ and $\omega_g$ are the energies of the excited and ground states, respectively (REFERENCE NEEDED). The time evolution of the two states is described by
+\begin{align}
+i\frac{\mathrm{d}c_{e,0}(t)}{\mathrm{d}t} =& \sum_Sc_{g,1_S}(t)\Omega_S e^{-i(\omega-\omega_a)t}\\
+i\frac{\mathrm{d}c_{g,1_S}(t)}{\mathrm{d}t} =& \ c_{e,0}(t)\Omega_S^*e^{i(\omega-\omega_a)t}
+\end{align}
+where the coupling between each state is given by the Rabi frequency \\$\Omega_s = -\bm{\mu}\cdot\bm{E}_{\omega}/\hbar$. The electric dipole moment, $\bm{\mu}$ between two states is given by
+\begin{equation}
+\bm{\mu} = e\bra{e}\bm{r}\ket{g} 
+\end{equation}
+and the electric field per mode is given by
+\begin{equation}
+\bm{E}_{\omega} = \sqrt{\frac{\hbar\omega}{2\epsilon_0V}}\bm{\varepsilon}
+\end{equation}
+$V$ is the volume over which the field is quantized and will eventually drop out. Integration of Eq.1.24 and substitution of the result into Eq.1.23, followed by further integration  
+
+
+
+
+
+For an atom in a radiation field of amplitude $E_0$, the Rabi frequency, the frequency at which an electron transitions between an excited state $\ket{e}$ and ground state $\ket{g}$ is defined as (REFERENCE NEEDED)
+\begin{equation}
+\Omega \equiv \frac{eE_0}{\hbar}\bra{e}\bm{\varepsilon}\cdot\bm{r}\ket{g}
+\end{equation}
+where $\bm{\varepsilon}$ is the polarization of the light. In general, calculating the dipole moment  $\mu = \bra{e} \bm{\varepsilon} \cdot \bm{r} \ket{g}$ is not a simple task. Immediately including the effects of the hyperfine interactions would further complicate matters. As such, it is useful to first describe the basic process through which the dipole moment $\mu$ is calculated. Once this is understood, including the hypefine interaction will simply be a extension of an already understood computation.
+In the simplest case (read hydrogenic wavefunctions), the Wigner-Eckart theorem states that the dipole moment can be split into two separate quantities in the following manner
+\begin{equation}
+\mu_{eg} = e \mathcal{R}_{n_e J_e, n_g J_g}\mathcal{A}_{J_eJ_e^z, J_gJ_g^z}
+\end{equation}
+where $\mathcal{R}_{n_e J_e, n_g J_g}$ and $\mathcal{A}_{J_eJ_e^z, J_gJ_g^z}$ are known as the radial and angular parts of the dipole moment, respectively. While both quantities are presented in more depth for the sake of completion (not the word I want to use...), it will become apparent that the hyperfine inter
+
+\subsection{Radial Part}
+In most cases in laser spectroscopy, the radial part of the dipole moment only acts as an overall multiplicative factor for the strength of the coupling between the excited and ground states. This is due to the fact that all available ground states typically share the same radial wavefunction, likewise in the case of the excited states. The radial part is given by
+\begin{equation}
+\mathcal{R}_{n_e J_e, n_g J_g} = \bra{R_{n_e J_e}}\bm{r}\ket{R_{n_g J_g}} = \int_0^{\infty}r^2R_{n_e J_e}(r)rR_{n_g J_g}(r)dr
+\end{equation}
+where the $R_{nJ}$ are the hydrogenic radial wavefunctions of their respective states
+\begin{equation}
+R_{nJ}(r) = N_{nJ}\rho^J\exp(-\rho/2)L_{n-J-1}^{2J+1}(\rho)
+\end{equation}
+where $N_{nJ}$ is a normalization constant and $L_{n-J-1}^{2J+1}(\rho)$ are the Laguerre polynomials evaluated at $\rho = 2r/na_0$, where $a_0$ is the Bohr radius. Table \ref{Rad_calc} shows the results results of the calculation for $n \leq 5$. The  
+
+
+\begin{appendices}
+\chapter{Look-Up Tables for Radial Part of Dipole Moment}
+
+
+\begin{table}[h]
+\centering
+\begin{tabular}{ccccc}\hline \hline
+nJ & 2(J+1) & 3(J+1) & 4(J+1) & 5(J+1) \\ \hline
+\end{tabular}
+\caption{hello}
+\label{Rad_calc}
+\end{table}
+
+
+
+
+\end{appendices}
+
 \end{document}
