Update, added a few more sections.

--- a/Writeup/thesis.bib
+++ b/Writeup/thesis.bib
@@ -9,3 +9,10 @@ author = {Harold J. Metcalf},
 title = {Laser Cooling and Trapping},
 year = 1999
 }
+
+@unpublished{TomT,
+author = {Thomas Procter},
+title = {New Techniques of Laser Spectroscopy on Exotic Isotopes of Gallium and Francium},
+date = 2013,
+note = {Doctoral Dissertation}
+}
